--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -96,7 +96,7 @@
 }
 
 .product-image-resize {
-  max-height: 500px;
+  max-height: 460px;
   object-fit: contain;
 }
 
